--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,27 +18,13 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    # Print python and pip version information for debugging.
-    - name: 'Print python version in bash task'
-      run: |
-        echo '==== Python information ===='
-        which python
-        which pip
-        python --version
-        echo '============================'
-      shell: bash
-
-    - name: 'Print env'
-      run: printenv
-      shell: bash
-
     - name: 'Install dependencies'
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Lint with flake8
+    - name: 'Lint with flake8'
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
