--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       shell: bash
 
     - name: 'Install dependencies'
-      run: python -m pip install --upgrade -r requirements_dev.txt
+      run: python -m pip install --upgrade -r requirements.txt
       shell: bash
 
     - name: 'Run tests'
