--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,4 @@ jobs:
 
     - name: 'Run tests'
       run: |
-        python -m unittest discover test
+        python -m unittest discover tests
