--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       run: python -m pip install --upgrade pip
 
     - name: 'Install dependencies'
-      run: pip install -r requirements.txt
+      run: pip install -e .[full]
       shell: bash
 
     - name: 'Run tests'
