--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,11 @@ jobs:
       run: printenv
       shell: bash
 
+    - name: 'Upgrade pip'
+      run: python -m pip install --upgrade pip
+
     - name: 'Install dependencies'
-      run: python -m pip install --upgrade -r requirements.txt
+      run: pip install -e .[full]
       shell: bash
 
     - name: 'Run tests'
