--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         echo $TEST_COVERAGE
         echo "BRANCH=$(echo ${BRANCH_NAME})" >> $GITHUB_ENV
 
-    - name: 'Create the Badge'
+    - name: 'Create Test Coverage Badge'
       if: ${{ matrix.os == 'macos-latest' && matrix.python-version == '3.6' }}
       uses: schneegans/dynamic-badges-action@v1.0.0
       with:
