find namespace packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,9 @@ ignore = E203, E501, W503, B950
 select = B,C,E,F,W,T4,B9
 exclude = .git
 
+[aliases]
+test=pytest
+
 [metadata]
 license_files =
    LICENSE
