--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: 'Run tests'
       id: tests
-      if: ${{ matrix.os != 'macos-latest' && matrix.python-version != '3.6' }}
+      if: ${{ matrix.os != 'macos-latest' || matrix.python-version != '3.6' }}
       shell: bash
       run: |
         pip install pytest-mock pytest-cov
