Change ci for tests only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       shell: bash
       run: |
         pip install pytest-mock pytest-cov
-        pytest --cov-report term:skip-covered --cov=tiledb tests/
+        pytest tests/
         REF=${{ github.ref }}
         echo "github.ref: $REF"
         IFS='/' read -ra PATHS <<< "$REF"
