--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ zip_safe = False
 packages = find_namespace:
 python_requires = >=3.6
 test_suite = tests
-install_requires = tiledb == 0.9.1
+install_requires = tiledb >= 0.9.0, < 0.9.2
 
 [options.extras_require]
 tensorflow = tensorflow>=2.5.0
