[Enhancement]Improve tiledb ml test coverage (#70)
* Increased test coverage

* Change CI jobs to show output - Fix format error

* Extra tests for test coverage increase

* Change ci for tests only

* Bound tiledb version

* PR comments fixes

* Combine single with multiple workers test

* Range version for tiledb

* Combine sparse tests for single worker

* Combine test for unsupported multiple workers in pytorch

* PR changes-resolving comments

* reduced the number of workers to 3, because of Dataloader Freeze

* fixed mock bug in PyTorch Dataloader tests

Co-authored-by: George Skoumas <george.skoumas@tiledb.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,23 @@ jobs:
       run: pip install -e .[full]
       shell: bash
 
+    - name: 'Run tests'
+      id: tests
+      if: ${{ matrix.os != 'macos-latest' || matrix.python-version != '3.6' }}
+      shell: bash
+      run: |
+        pip install pytest-mock pytest-cov
+        pytest tests/
+        REF=${{ github.ref }}
+        echo "github.ref: $REF"
+        IFS='/' read -ra PATHS <<< "$REF"
+        BRANCH_NAME="${PATHS[1]}_${PATHS[2]}"
+        echo $BRANCH_NAME
+        echo "BRANCH=$(echo ${BRANCH_NAME})" >> $GITHUB_ENV
+
     - name: 'Run test coverage statistics'
       id: stats
+      if: ${{ matrix.os == 'macos-latest' && matrix.python-version == '3.6' }}
       shell: bash
       run: |
         pip install pytest-mock pytest-cov
