--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,8 @@ packages = find_namespace:
 python_requires = >=3.6
 test_suite = tests
 install_requires = tiledb >= 0.9.0, < 0.9.2
+use_scm_version = True
+setup_requires = setuptools_scm
 
 [options.extras_require]
 tensorflow = tensorflow>=2.5.0
