Added setuptools_scm to setup.cfg (#71)
* added setuptools_scm to setup.cfg

* update gitignore for setuptools_scm

* update gitignore for coverage reports

* coverage badge change to psf/black@*

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ dist/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+
+# setuptools-scm
+tiledb/ml/version.py
+
+# Unit test / coverage reports
+.coverage
