--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = tiledb-ml
-version = 0.2.3
 description = Package supports all machine learning functionality for TileDB Embedded and TileDB Cloud
 author = TileDB, Inc.
 author_email = help@tiledb.io
@@ -37,6 +36,7 @@ packages = find_namespace:
 python_requires = >=3.6
 test_suite = tests
 install_requires = tiledb >= 0.9.0, < 0.9.2
+setup_requires = setuptools_scm >= 6.0.0
 
 [options.extras_require]
 tensorflow = tensorflow>=2.5.0
