--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ packages = find_namespace:
 python_requires = >=3.6
 test_suite = tests
 install_requires = tiledb >= 0.9.0, < 0.9.2
-setup_requires = setuptools_scm >= 6.0.0
+setup_requires = setuptools_scm >= 6.0.0, < 6.0.1
 
 [options.extras_require]
 tensorflow = tensorflow>=2.5.0, < 2.6.0
