--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ zip_safe = False
 packages = find_namespace:
 python_requires = >=3.6
 test_suite = tests
-install_requires = tiledb >= 0.9.0, < 0.9.2
+install_requires = tiledb >= 0.9.2
 setup_requires = setuptools_scm <= 6.0.0
 
 [options.extras_require]
