--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
       run: pip install wheel && python setup.py sdist bdist_wheel && ls -l dist
     - name: Publish package to TestPyPI
       uses: pypa/gh-action-pypi-publish@master
+      continue-on-error: true
       with:
         user: __token__
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
