--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,7 @@ disallow_any_generics = True
 #disallow_subclassing_any = True
 
 # Untyped definitions and calls
-disallow_untyped_calls = False
+disallow_untyped_calls = True
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
 disallow_untyped_decorators = True
