--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,7 @@ disallow_any_generics = True
 #disallow_subclassing_any = True
 
 # Untyped definitions and calls
-disallow_untyped_calls = True
+# disallow_untyped_calls = True
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
 disallow_untyped_decorators = True
@@ -84,7 +84,7 @@ strict_optional = True
 
 # Configuring warnings
 warn_redundant_casts = True
-warn_unused_ignores = True
+warn_unused_ignores = False
 warn_no_return = True
 warn_return_any = True
 warn_unreachable = True
