Bound pytorch version

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,12 +39,12 @@ setup_requires = setuptools_scm <= 6.0.0
 
 [options.extras_require]
 tensorflow = tensorflow<=2.5.0;
-pytorch = torch>=1.8.1; torchvision>=0.9.1
+pytorch = torch>=1.8.1, <1.10; torchvision>=0.9.1
 sklearn = scikit-learn>=0.23.0
 tensorflow_cloud = tensorflow<=2.5.0; tiledb-cloud>=0.7.11
-pytorch_cloud = torch>=1.8.1; torchvision>=0.9.1; tiledb-cloud>=0.7.11
+pytorch_cloud = torch>=1.8.1, <1.10; torchvision>=0.9.1; tiledb-cloud>=0.7.11
 sklearn_cloud = scikit-learn>=0.23.0; tiledb-cloud>=0.7.11
-full = tensorflow<=2.5.0; torch>=1.8.1; torchvision>=0.9.1; scikit-learn>=0.23.0; tiledb-cloud>=0.7.11
+full = tensorflow<=2.5.0; torch>=1.8.1, <1.10; torchvision>=0.9.1; scikit-learn>=0.23.0; tiledb-cloud>=0.7.11
 
 [tool:pytest]
 addopts = --cov=tiledb --cov-report=term-missing
