--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,10 @@ jobs:
 
     - name: 'Run mypy'
       run: |
-        pip install mypy
-        mypy .
+        python -m venv mypyenv
+        mypyenv/bin/pip install mypy
+        mypyenv/bin/mypy .
+        rm -rf mypyenv
 
     - name: 'Run tests'
       if: ${{ matrix.os != 'macos-latest' || matrix.python-version != '3.7' }}
