--- a/setup.cfg
+++ b/setup.cfg
@@ -34,9 +34,7 @@ zip_safe = False
 packages = find_namespace:
 python_requires = >=3.7
 test_suite = tests
-install_requires =
-    tiledb >= 0.9.2
-    wrapt
+install_requires = tiledb >= 0.9.2
 setup_requires = setuptools_scm <= 6.0.0
 
 [options.extras_require]
