--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest]
         python-version: [3.7, 3.8]
+    env:
+      run_coverage: ${{ github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
 
     steps:
     - uses: actions/checkout@v2
@@ -30,27 +32,28 @@ jobs:
         rm -rf mypyenv
 
     - name: 'Run tests'
-      if: ${{ matrix.os != 'ubuntu-latest' || matrix.python-version != '3.7' }}
+      if: ${{ !fromJSON(env.run_coverage) }}
       run: |
         pip install pytest-mock
         pytest tests/
 
     - name: 'Run test coverage statistics'
       id: stats
-      if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
+      if: ${{ fromJSON(env.run_coverage) }}
       run: |
         pip install pytest-mock pytest-cov
-        TEST_COVERAGE="$(pytest --cov-report=term-missing --cov=tiledb tests/ | grep '^TOTAL' | awk -v N=4 '{print $N}')"
+        pytest --cov-report=term-missing --cov=tiledb tests/ | tee coverage.txt
+        TEST_COVERAGE="$(grep '^TOTAL' coverage.txt | awk -v N=4 '{print $N}')"
         echo "::set-output name=COVERAGE::$TEST_COVERAGE"
 
     - name: 'Create Test Coverage Badge'
-      if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
-      uses: psf/black@21.7b0
+      if: ${{ fromJSON(env.run_coverage) }}
+      uses: schneegans/dynamic-badges-action@v1.1.0
       with:
         auth: ${{ secrets.COVERAGE_SECRET }}
         gistID: 2506f6c9d3375e2d636cf594340d11bf
         filename: gistfile.json
-        label: coverage
+        label: Test Coverage
         message: ${{ steps.stats.outputs.COVERAGE }}
         color: green
         namedLogo: pytest
