Replace scipy.sparse with pydata/sparse

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ zip_safe = False
 packages = find_namespace:
 python_requires = >=3.7
 test_suite = tests
-install_requires = tiledb == 0.12.3
+install_requires = sparse; tiledb == 0.12.3
 setup_requires = setuptools_scm <= 6.0.0
 
 [options.extras_require]
