--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,49 +4,56 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     strategy:
+      fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest]
-        python-version: [3.7, 3.8]
+        ml-deps:
+          - "scikit-learn=1.0 pytorch=1.8.1 tensorflow=2.4.3 numpy=1.19"
+          - "scikit-learn=1.0 pytorch=1.9.1 tensorflow=2.4.1 numpy=1.19"
+          - "scikit-learn=1.0 pytorch=1.10  tensorflow=2.6.2=cpu*"
+          - "scikit-learn=1.0 pytorch=1.11  tensorflow=2.7.0=cpu*"
     env:
-      run_coverage: ${{ github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
+      run_coverage: ${{ github.ref == 'refs/heads/master' }}
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+
+    - name: Set up miniconda
+      uses: conda-incubator/setup-miniconda@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.7"
+        mamba-version: "*"
+        channels: conda-forge,defaults
 
-    - name: 'Install dependencies'
+    - name: Install dependencies
+      run: mamba install pytest-mock pytest-cov ${{ matrix.ml-deps }}
+
+    - name: Install TileDB-ML
+      run: pip install -e .[cloud]
+
+    - name: Run mypy
       run: |
-        pip install --upgrade pip
-        pip install -e .[full]
+        conda activate base
+        mamba install mypy
+        mypy .
 
-    - name: 'Run mypy'
-      run: |
-        python -m venv mypyenv
-        mypyenv/bin/pip install mypy
-        mypyenv/bin/mypy .
-        rm -rf mypyenv
-
-    - name: 'Run tests'
+    - name: Run tests
       if: ${{ !fromJSON(env.run_coverage) }}
-      run: |
-        pip install pytest-mock
-        pytest tests/
+      run: pytest --disable-warnings tests/
 
-    - name: 'Run test coverage statistics'
+    - name: Run test coverage statistics
       id: stats
       if: ${{ fromJSON(env.run_coverage) }}
       run: |
-        pip install pytest-mock pytest-cov
-        pytest --cov-report=term-missing --cov=tiledb tests/ | tee coverage.txt
+        pytest --disable-warnings --cov-report=term-missing --cov=tiledb tests/ | tee coverage.txt
         TEST_COVERAGE="$(grep '^TOTAL' coverage.txt | awk -v N=4 '{print $N}')"
         echo "::set-output name=COVERAGE::$TEST_COVERAGE"
 
-    - name: 'Create Test Coverage Badge'
+    - name: Create Test Coverage Badge
       if: ${{ fromJSON(env.run_coverage) }}
       uses: schneegans/dynamic-badges-action@v1.1.0
       with:
