--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ matrix.ml-deps }}
-        restore-keys: ${{ runner.os }}-pip-
+        key: ${{ runner.os }}:ml-deps=[${{ matrix.ml-deps }}]
 
     - name: Install dependencies
       run: |
