--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
             python-version: "3.9"
           - ml-deps: "torch==2.3.1+cpu torchvision==0.18.1+cpu torchdata==0.8.0 'tensorflow-cpu<2.16.0' 'numpy<2'"
             python-version: "3.9"
+          - ml-deps: "torch torchvision torchdata~=0.8.0 'tensorflow-cpu<2.16' 'numpy<2'"
+            python-version: "3.12"
 
     env:
       run_coverage: ${{ github.ref == 'refs/heads/master' }}
