--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,12 @@ jobs:
             python-version: "3.9"
           - ml-deps: "torch==1.13.0+cpu torchvision==0.14.0+cpu torchdata==0.5.0 tensorflow-cpu==2.13.0"
             python-version: "3.9"
-          - ml-deps: "torch==2.1.0+cpu torchvision==0.16.0+cpu torchdata==0.7.0 tensorflow-cpu==2.13.0 numpy==1.24.3"
+          - ml-deps: "torch==2.0.0+cpu torchvision==0.15.0+cpu torchdata==0.6.0 tensorflow-cpu==2.15.0 'numpy<=1.25'"
             python-version: "3.9"
-          - ml-deps: "torch==2.3.1+cpu torchvision==0.18.1+cpu torchdata==0.8.0 tensorflow-cpu==2.13.0 'numpy<2'"
+          - ml-deps: "torch==2.1.0+cpu torchvision==0.16.0+cpu torchdata==0.7.0 tensorflow-cpu==2.13.0 'numpy<=1.25'"
             python-version: "3.9"
+#          - ml-deps: "torch==2.3.1+cpu torchvision==0.16.0+cpu torchdata==0.7.0 tensorflow-cpu==2.13.0 numpy==1.24.3"
+#            python-version: "3.9"
 
     env:
       run_coverage: ${{ github.ref == 'refs/heads/master' }}
