--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,8 @@ jobs:
 
     - name: Run tests
       if: ${{ !fromJSON(env.run_coverage) }}
-      run: pytest --disable-warnings tests/
+      run:
+        pytest --disable-warnings tests/
 
     - name: Run test coverage statistics
       id: stats
