--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ test=pytest
 [flake8]
 statistics = true
 exclude = .git
-ignore = E203, E501, W503, B950
+ignore = E203, E231, E501, E713, W503, B950
 select = B,C,E,F,W,T4,B9
 per-file-ignores =
     __init__.py: F401, F403
